--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://abpoooo.github.io/XinhanYang-Portfolio",
   "name": "portfolio_new",
   "private": true,
   "version": "0.0.0",
@@ -23,6 +24,10 @@
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^5.3.10",
     "three": "^0.152.2"
+  },
+  "script": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
