--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://abpoooo.github.io/XinhanYang-Portfolio",
+  "homepage": "http://wesleytianqiwei.github.io/WesleyWei-Portfolio",
   "name": "portfolio_new",
   "private": true,
   "version": "0.0.0",
@@ -27,7 +27,6 @@
     "styled-components": "^5.3.10",
     "three": "^0.152.2"
   },
-
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
