--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://wesleytianqiwei.github.io/WesleyWei-Portfolio",
+  "homepage": "https://wesleyweitianqi.github.io/WesleyWei-Portfolio/",
   "name": "portfolio_new",
   "private": true,
   "version": "0.0.0",
